<resources>
    <string name="app_name">Coupon Town</string>


    <string name="facebook_app_id">302776067156559</string>
    <string name="fb_login_protocol_scheme">fb302776067156559</string>


    <string name="login_button">Login / Register</string>
    <string name="lostpassword">Reset Password</string>
    <string name="tnc">Terms and Conditions</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello,Guest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="mail_feedback_email">Email address where the feedback is going.</string>
    <string name="mail_feedback_subject">Subject of the email.</string>
    <string name="mail_feedback_message">Default mail message.</string>
    <string name="title_send_feedback">Title of chooser dialog.</string>
    <string name="skiplogin">SkipLogin</string>


    <!-- Profile Fields -->
    <string name="hint_name">Full Name</string>
    <string name="hint_image">Choose</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_number">Mobile</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_sign_up">update</string>

</resources>
