<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="379dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:orientation="vertical"
                  android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.0"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tc"
                  app:layout_constraintVertical_bias="0.483">

        <EditText android:layout_margin="20dp"
                  android:id="@+id/email"
                  android:inputType="textEmailAddress"
                  android:hint="Email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>


        <EditText android:layout_margin="16dp"
                  android:id="@+id/password"
                  android:inputType="textPassword"
                  android:hint="Password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">

            <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:layout_margin="16dp"/>

            <TextView
                    android:id="@+id/resetPassword"
                    android:layout_width="79dp"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:layout_margin="16dp"
                    android:text="@string/lostpassword"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                    android:id="@+id/skipLoginTv"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:layout_margin="16dp"
                    android:text="@string/skiplogin"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>


        </LinearLayout>


        <com.google.android.gms.common.SignInButton
                android:id="@+id/g_loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"/>

    </LinearLayout>

    <TextView
            android:id="@+id/tc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:padding="20px"
            android:layout_margin="16dp"
            android:text="@string/tnc"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>


</android.support.constraint.ConstraintLayout>